--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        maven { url "https://jitpack.io" }
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
