--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         minSdk 23
         targetSdk 32
         versionCode 1
-        versionName "1.1.1"
+        versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -54,7 +54,7 @@ android {
                     env     : "staging"
             ]
             firebaseAppDistribution {
-                releaseNotes="- Animations \n- Password only 8+ symbols, and alphanumeric\n- Bottom app bar for Dashboard"
+                releaseNotes="- Profile Screen \n- Dashboard Update\n- New Animation"
                 groups="gym-testers"
             }
         }
